[build-system]
requires=["setuptools>=61.0.0", "setuptools-scm>=8", "wheel", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "pydeb"
authors = [
  {name = "Jorn Bruggeman", email = "jorn@bolding-bruggeman.com"}
]
description = "Dynamic Energy Budget models in Python"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License (GPL)",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering"
]
dependencies = ["numpy"]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/jornbr/pydeb"

[project.scripts]
pydeb = "pydeb.__main__:main"

[tool.setuptools.package-data]
"pydeb.infer" = ["data/*"]

[tool.setuptools_scm]
